# PLENA_Simulator

./: .dockerignore  .envrc  .gitignore  .gitmodules  ACCURACY_TABLE.md  CLAUDE.md  CLAUDE_STATUS.md  COORDINATION.md  FLUX_MMDIT_REPORT.tex  FLUX_REPORT.tex  FUTURE_PLANS.md  HANDOFF_fa_min_large_config.md  HBM_TIMING_NOTES.md  KERNEL_REPORT.md  KERNEL_REPORT_DSB.md  KERNEL_REPORT_SSB.md  MANAGER_BLOCK_REPORT.md  MANAGER_BLOCK_REPORT_DSB.md  MANAGER_BLOCK_REPORT_SSB.md  MANAGER_DESIGN.md  OPENSORA_ACCEL_REPORT.md  OPENSORA_ACCEL_REPORT.tex  POWER_ENERGY_REPORT_DSB.md  POWER_ENERGY_REPORT_SSB.md  README.md  REPORT_ADAMW_OPTIMIZER_analytic.md  REPORT_DSB_analytic.md  REPORT_DSB_backward_analytic.md  REPORT_FINAL_LAYER_analytic.md  REPORT_SSB_analytic.md  REPORT_SSB_backward_analytic.md  ROADMAP.md  flake.nix  justfile  plena_settings.toml  pyproject.toml  quant  qwen3_32b_main_dse_combined_filtered_no_mxint3.csv  setup.py  smolvlm2_profile.md  (+1 more)
behavioral_simulator/: Cargo.toml  readme.md
behavioral_simulator/lib/memory/: Cargo.toml
behavioral_simulator/lib/quantize/: README.md
behavioral_simulator/lib/ramulator/: Cargo.toml
behavioral_simulator/lib/runtime/: Cargo.toml
behavioral_simulator/lib/vector_sram/: Cargo.toml
behavioral_simulator/pkgs/: default.nix
behavioral_simulator/pkgs/ramulator2/: default.nix  fix_density.patch  ramulator_capi.cc
behavioral_simulator/src/: load_config.rs  main.rs  op.rs
behavioral_simulator/testbench/: attn_test.py  auto_compiler_helper.py  bmm_test.py  btmm_bmmwo_test.py  check_mem.py  config_utils.py  developer_compiler.py  dllm1_test.py  example.txt  ffn_intermediate_test.py  ffn_test.py  flash_attention_expand_test.py  flash_attention_function_add_test.py  flash_attention_plena_test.py  flashattn_decode_test.py  flashattn_output_test.py  flashattn_overall_test.py  flashattn_prefill_test.py  flashattn_pv_test.py  flashattn_qkt_test.py  flashattn_softmax_test.py  fpvar_softmax_test.py  gelu_test.py  h_store_test.py  layer_norm_test.py  linear_compiler_test.py  linear_loop_test.py  linear_test.py  loop_test.py  plena_program.py  projection_T_test.py  qk_multiply_test.py  rms_test.py  s_map_v_test.py  silu_test.py  simple_compiler_test.py  sub_matrix_manager.py  sub_matrix_test.py  symbol_table.py  test_dual_naming_test.py  (+4 more)
behavioral_simulator/tools/: check_mem.py  view_mem.py
compiler/generator/: README.md  justfile  pyproject.toml  runner.py
compiler/generator/parser/: __init__.py  hardware_parser.py  llm_parser.py
compiler/generator/passes/: code_gen.py  utilization_report.py
compiler/generator/scheduler/: __init__.py  mem_layout_lib.json  scheduler.py
compiler/generator/tests/: embedding_asm.txt  test_attention_code_gen.py  test_embedding_code_gen.py  test_llm_parser.py  test_vector_code_gen.py
transactional_emulator/: Cargo.toml  TIMING_AUDIT_vs_main.md  readme.md  start_online_sim.sh  stop_online_sim.sh
transactional_emulator/calibration/: rtl_opcode_timing_v1.json
transactional_emulator/demo/: cpp_client_demo.cpp  emulator_client.py  python_client_demo.py  webgui.py
transactional_emulator/demo/templates/: monitor.html  webgui.html
transactional_emulator/lib/buddy/: Cargo.toml
transactional_emulator/lib/dma/: Cargo.toml
transactional_emulator/lib/memory/: Cargo.toml
transactional_emulator/lib/quantize/: Cargo.toml
transactional_emulator/lib/ramulator/: Cargo.toml  build.rs
transactional_emulator/lib/runtime/: Cargo.toml
transactional_emulator/lib/sram/: Cargo.toml
transactional_emulator/lib/systolic_array/: Cargo.toml
transactional_emulator/lib/vector_sram/: Cargo.toml
transactional_emulator/pkgs/dramsys/: default.nix  dramsys_capi.cc  dramsys_capi.h
transactional_emulator/pkgs/ramulator2/: default.nix  fix_density.patch  hbm_nbl.patch  ramulator_capi.cc  ramulator_capi.h
transactional_emulator/src/: accelerator.rs  cli.rs  dma.rs  dma_calibration.rs  lib.rs  load_config.rs  main.rs  matrix_core.rs  matrix_machine.rs  op.rs  op_stats.rs  opcode_timing.rs  preload.rs  profiler.rs  program.rs  runner.rs  runtime_config.rs  scheduler.rs  stage_profile.rs  timing.rs  timing_overlay.rs  vector_machine.rs
transactional_emulator/src/accelerator/: dispatch.rs  execution.rs  loop_state.rs  mod.rs  registers.rs  scalar_sram.rs
transactional_emulator/src/dispatch/: control.rs  matrix.rs  mem.rs  mod.rs  scalar.rs  vector.rs
transactional_emulator/testbench/: MMDIT_VS_OPENSORA.md  README.md  SSB_DIAGNOSIS_REPORT.md  TILE_TENSOR_COMPILER_PRINCIPLES.md  TILE_TENSOR_KERNEL_PROGRAMS.md  TILE_TENSOR_PROGRAM_USAGE.md  TILE_TENSOR_RUNTIME_NOTES.md  _tb_cache.py  _verify_mx_roundtrip.py  aggregate_ttft_tpot.py  aten_compiler_decoder_test.py  aten_compiler_ffn_matched_test.py  aten_compiler_ffn_matched_vlen128_test.py  aten_compiler_ffn_test.py  aten_compiler_layer_norm_matched_test.py  aten_compiler_layer_norm_matched_vlen128_test.py  aten_compiler_layer_norm_test.py  aten_compiler_linear_matched_test.py  aten_compiler_linear_matched_vlen128_test.py  aten_compiler_linear_test.py  aten_compiler_rms_norm_matched_test.py  aten_compiler_rms_norm_matched_vlen128_test.py  aten_compiler_rms_norm_test.py  auto_compiler_helper.py  bmm_aten_test.py  bmm_test.py  btmm_bmmwo_test.py  build_paths.py  check_mem.py  clm60m_ffn_test.py  columnwise_scan_test.py  config_utils.py  conv2d_aten_test.py  conv2d_siglip_ksize14_test.py  conv2d_siglip_real_k14_test.py  conv2d_tiled_im2col_test.py  decoder_asm_gen.py  developer_compiler.py  dllm1_test.py  double_stream_block_graph.dot  (+128 more)
transactional_emulator/testbench/aten/: attention_looping_compare.py  configurable.py  embedding_add_test.py  ffn_test.py  flash_attention_gqa_test.py  flash_attention_mha_test.py  flash_attention_packed_gqa_tiled_test.py  flash_attention_test.py  fpvar_softmax_test.py  golden.py  layer_norm_test.py  linear_test.py  norm_test.py  packed_q_rope_test.py  qwen3_moe_static_test.py  (+2 more)
transactional_emulator/tools/: check_mem.py  config_utils.py  create_sim_env.py  emulator_runner.py  show_trace.sh  test_data_gen.py  trace_gp.py  view_mem.py
(+10771 files in other folders)
