[package]
name = "memory"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
trait-variant = "0.1.2"
zerocopy = "0.8"
runtime = { path = "../runtime" }
tokio = { version = "1.45.1", features = ["sync"] }
futures-util = "0.3.31"
rand = "0.9.2"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["sync", "rt-multi-thread", "macros"] }
