[package]
name = "systolic_array"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
quantize = { path = "../quantize" }
runtime = { path = "../runtime" }
tch = { version = "0.20.0", features = ["download-libtorch"] }
serde = { version = "1.0", features = ["derive"] }
